gen/v25.1/properties/pages/deprecated/partials/deprecated-properties.adoc

== Configuration properties

This is an exhaustive list of all the deprecated properties.

=== Broker properties

- coproc_supervisor_server

- dashboard_dir

- enable_central_config

=== Cluster properties

- cloud_storage_cache_trim_carryover_bytes

- cloud_storage_disable_metadata_consistency_checks

- cloud_storage_max_materialized_segments_per_shard

- cloud_storage_max_partition_readers_per_shard

- cloud_storage_reconciliation_ms

- coproc_max_batch_size

- coproc_max_inflight_bytes

- coproc_max_ingest_bytes

- coproc_offset_flush_interval_ms

- datalake_disk_space_monitor_interval

- enable_admin_api

- enable_auto_rebalance_on_node_add

- enable_coproc

- find_coordinator_timeout_ms

- full_raft_configuration_recovery_pattern

- health_monitor_tick_interval

- id_allocator_replication

- kafka_admin_topic_api_rate

- kafka_client_group_byte_rate_quota

- kafka_client_group_fetch_byte_rate_quota

- kafka_quota_balancer_min_shard_throughput_bps

- kafka_quota_balancer_min_shard_throughput_ratio

- kafka_quota_balancer_node_period

- kafka_quota_balancer_window

- kafka_throughput_throttling_v2

- leader_balancer_mode

- max_version

- min_version

- partition_autobalancing_movement_batch_size_bytes

- raft_flush_timer_interval_ms

- raft_max_concurrent_append_requests_per_follower

- rm_violation_recovery_policy

- schema_registry_protobuf_renderer_v2

- seed_server_meta_topic_partitions

- seq_table_min_size

- target_fetch_quota_byte_rate

- target_quota_byte_rate

- tm_violation_recovery_policy

- transaction_coordinator_replication

- tx_log_stats_interval_s

- tx_registry_log_capacity

- tx_registry_sync_timeout_ms

- use_scheduling_groups

